   opening a current exercice.

   - Add a JSON header to backup archives.
   - Backups now manage several data streams, of which dossier and Openbook headers.
   - Backups now have a comment (todo #792).
   - DossierManager: delete an exercice (todo #1316).
   - DossierOpen: set the read-only flag when selecting a closed exercice (todo #1321).
   - ExerciceNew: create a new exercice.
   - Replace Backup standard dialog box with an assistant (todo #1317).
   - Restore assistant implements restore protection rules (todo #1320).

   + ofa-unzip: command-line utility to unarchive a data flow on stdout.

 Bug fixes:

   - 

 Other changes:

   DBModel Core v34.

   - my_date_editable_set_entry_format(): renamed from my_date_editable_set_format (todo #1331).
   - my_date_editable_set_label_format(): renamed from my_date_editable_set_label (todo #1332).
   - myIBin: new interface (todo #1323).
   - myICollectionable: remove ofaHub dependancy (todo #1319).
   - myIDialog: review whole closing process (todo #1330).
   - myISettings: make the interface more consistent (todo #1301).
   - my_iwindow_msg_dialog(): deprecated (todo #1333).
   - my_iwindow_set_close_allowed(): new function replacing is_destroy_allowed() method (todo #1287).
   - my_stamp_xxx() functions now accept a display format (todo #1318).
   - my_utils_dialog_question(): now accepts a GtkWindow parent.
   - my_utils_file_is_readable_file(): renamed to my_utils_file_is_readable().
   - my_utils_uri_is_readable_file(): renamed to my_utils_uri_is_readable().
   - ofaBackupAssistant: new class.
   - ofaDbmsRootBin: deprecated class (todo #1271).
   - ofaDbsu: new class.
   - ofa_dossier_collection_set_meta_from_editor(): deprecated function (todo #1267).
   - ofaDossierDelete: deprecated class.
   - ofaDossierNew: makes use of ofaExerciceEditBin (todo #1334).
   - ofaDossierNewBin: deprecated class.
   - ofaDossierNewMini: deprecated class (todo #1329).
   - ofaDossierProps: new class.